  - Assembla integration (Carlos Paramio)
  - Fixed another 500 error with submodules
  - UI: More compact issues page
  - Minimal password length increased to 8 symbols
  - Side-by-side diff view (Steven Thonus)
  - Internal projects (Jason Hollingsworth)
  - Allow removal of avatar (Drew Blessing)
  - Project web hooks now support issues and merge request events

v 6.3.0
  - API for adding gitlab-ci service
  - Init script now waits for pids to appear after (re)starting before reporting status (Rovanion Luckey)
  - Restyle project home page
  - Grammar fixes
  - Show branches list (which branches contains commit) on commit page (Andrew Kumanyaev)
  - Security improvements
  - Added support for GitLab CI 4.0
  - Fixed issue with 500 error when group did not exist
  - Ability to leave project
  - You can create file in repo using UI
  - You can remove file from repo using UI
  - API: dropped default_branch attribute from project during creation
  - Project default_branch is not stored in db any more. It takes from repo now.
  - Admin broadcast messages
  - UI improvements
  - Dont show last push widget if user removed this branch
  - Fix 500 error for repos with newline in file name
  - Extended html titles
  - API: create/update/delete repo files
  - Admin can transfer project to any namespace
  - API: projects/all for admin users
  - Fix recent branches order

v 6.2.4
  - Security: Cast API private_token to string (CVE-2013-4580)
  - Security: Require gitlab-shell 1.7.8 (CVE-2013-4581, CVE-2013-4582, CVE-2013-4583)
  - Fix for Git SSH access for LDAP users

v 6.2.3
  - Security: More protection against CVE-2013-4489
  - Security: Require gitlab-shell 1.7.4 (CVE-2013-4490, CVE-2013-4546)
  - Fix sidekiq rake tasks

v 6.2.2
  - Security: Update gitlab_git (CVE-2013-4489)

v 6.2.1
  - Security: Fix issue with generated passwords for new users

v 6.2.0
  - Public project pages are now visible to everyone (files, issues, wik, etc.)